tests/base/parser/bad/exps/exp_t-let-id-eq-with.scilexp
let a = field in a (* field is always an invalid expression *)
